8302294: Cherry-pick WebKit 615.1 stabilization fixes

Reviewed-by: sykora, kcr